@@ -47,6 +47,7 @@ in a file that is loaded before your specs.
 * Sugar FREE!
 * Made Spec::Ui *much* easier to install. It will be released separately. Check out trunk/spec_ui/examples
 * HTML reports now include a syntax highlighted snippet of the source code where the spec failed (needs the syntax gem)
+* Added [#10262] Better Helper testing of Erb evaluation block helpers
 * Added [#9735] support flexmock (thanks to Jim Weirich for his modifications to flexmock to support this)
 * Spec::Rails controller specs will no longer let mock exception ripple through to the response.
 * Fixed [#9260] IvarProxy does not act like a hash.
